docs/versioned_docs/version-2.23.0/Enterprise/white-label.md
---
id: white-label
title: White Label
---

<div className='badge badge--primary heading-badge'>Available on: Paid plans</div>

The White Label feature allows you to completely remove ToolJet's branding from the ToolJet platform, allowing you to replace it with your own customized logo, favicon and page title. This feature grants you full control over the visual identity of your ToolJet-powered application, ensuring a seamless and personalized user experience.

With this feature, you gain the ability to rebrand the following key elements:

- **Application Logo**: This includes the logo displayed on the login screen, dashboard, and app-editor.

<div style={{textAlign: 'center'}}>

<img className="screenshot-full" src="/img/enterprise/white-label/newdash.png" alt="ToolJet - Enterprise - White label"/>

</div>

- **Favicon**: The small icon associated with your application.

<div style={{textAlign: 'center'}}>

<img className="screenshot-full" src="/img/enterprise/white-label/newfav.png" alt="ToolJet - Enterprise - White label"/>

</div>

- **Page Title**: This is the text displayed next to the Favicon.

<div style={{textAlign: 'center'}}>

<img className="screenshot-full" src="/img/enterprise/white-label/title.png" alt="ToolJet - Enterprise - White label" />

</div>

## Configuration

To enable white labelling, you'll need to go to the **Instance Settings** from the Dashboard and click on the `White labelling` tab. On the White labelling page, you'll be able to configure the following:

- **Application Logo**: Add the URL of the image you want to use as your application logo. Preferred dimensions of the logo are: width `130px` and height `26px`.
- **Favicon**: Enter the URL of the image you want to use as your application's favicon. Preferred dimensions of the favicon are: width `32px` and height `32px` or `16px` and height `16px`.
- **Page Title**: Enter the text you want to display as your application's title. Preferred title length are 50-60 characters.

<div style={{textAlign: 'center'}}>

<img className="screenshot-full" src="/img/enterprise/white-label/whitelabelsettings.png" alt="ToolJet - Enterprise - White label" />

</div>